<resources>
    <string name="app_name">BooksApplication</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="fragment_main">Fragment Main</string>
    <string name="fragment_map">Fragment Map</string>

    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCtsOk0uU5L9qaB7usCiLVHgWGuyAqWOCA</string>

    <string name="text_ok">ОК</string>
    <string name="text_cancel">Отмена</string>
    <string name="search">Поиск</string>
    <string name="clear_search">Очистить</string>

    <string name="fio">%1$s %2$s %3$s</string>
    <string name="text_title_years">Возраст</string>
    <string name="years">%1$d лет</string>
    <plurals name="years_counts">
        <item quantity="one">%1$d год</item>
        <item quantity="two">%1$d года</item>

        <item quantity="few">%1$d года</item>
        <item quantity="many">%1$d лет</item>
        <item quantity="other">%1$d лет</item>
    </plurals>

    <string name="back">Назад</string>
    <string name="close">Закрыть</string>
    <string name="close_X">Закрыть X</string>

    <string name="menu_selector">селектор</string>
    <string name="menu_search">Поиск</string>

    <string name="menu_logo">Логотип</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>
    
    <string name="city_and_temperature">Москва 24°С</string>


    <!--нижнее меню-->
    <string name="backpack">Рюкзак</string>

    <string name="often_used">Часто использовалось</string>

    <string name="price_min">От %1$d руб</string>

    <plurals name="reviews_count">
        <item quantity="one">%1$d отзыв</item>
        <item quantity="two">%1$d отзыва</item>
        <item quantity="few">%1$d отзыва</item>
        <item quantity="many">%1$d отзывов</item>
        <item quantity="other">%1$d отзывов</item>
        <item quantity="zero">нет отзывов</item>
    </plurals>

    <string name="no_reviews">нет отзывов</string>

    <string name="clear_filters">Очистить фильтр</string>
    <string name="search_results">Результаты поиска</string>
    <string name="search_results_all">Результаты поиска по услугам</string>

    <string name="service_info">Подробная информация об услуге</string>

    <string name="price">цена</string>
    <string name="rating">рейтинг</string>
    <string name="category">категория</string>
    
    <string name="select_all">Выбрать все</string>
    <string name="remove_all">Убрать все</string>
    <string name="ready">Готово</string>

    <string name="services">Услуги</string>
    <string name="peoples">Люди</string>

    <string name="write_message">Написать сообщение</string>
    <string name="add_to_favourite">+Подписаться</string>

    <string name="underlined"><u>%1$s</u></string>

    <string name="backToList">Вернуться</string>

    <plurals name="reviews_count_underlined">
        <item quantity="one"><u>%1$d отзыв</u></item>
        <item quantity="two"><u>%1$d отзыва</u></item>
        <item quantity="few"><u>%1$d отзыва</u></item>
        <item quantity="many"><u>%1$d отзывов</u></item>
        <item quantity="other"><u>%1$d отзывов</u></item>
        <item quantity="zero"><u>нет отзывов</u></item>
    </plurals>

    <string name="image_count">%1$d/%2$d</string>

    <string name="view_more">Смотреть еще &#8230;</string>
    <string name="view_fewer">Свернуть</string>

    <string name="services_not_found">Услуги не найдены</string>


    <string name="authentication_authorization_enter">Войти</string>
    <string name="authentication_authorization_login">Email</string>
    <string name="authentication_authorization_password">Пароль</string>
    <string name="authentication_authorization_forgot_password">Забыли пароль?</string>
    <string name="authentication_authorization_register">Регистрация</string>

    <string name="autentication_authorization_enter_social_net">Вход через социальные сети</string>

    <string name="autentication_authorization_password_incorrect">Неправильно указан пароль</string>
    <string name="autentication_authorization_login_incorrect">Неправильно указан логин</string>

    <string name="authentication_registration_enter_login">Введите email:</string>

    <string name="authentication_registration_enter_password">Создайте пароль для аккаунта</string>

    <string name="authentication_registration_confirm_password">Подтвердите пароль</string>

    <string name="authentication_registration_confirm_code_enter_code">Введите код, отправленный для подтверждения</string>
    <string name="authentication_registration_confirm_code_enter_code_reply">Отправить код повторно через %1$d сек.</string>
    <string name="authentication_registration_confirm_code_enter_code_reply_2">Отправить код повторно через %1$d мин. %2$d сек.</string>

    <string name="authentication_registration_confirm_code_wrong_activation_code">Неправильный активационный код</string>
    <string name="authentication_registration_confirm_code_change_login">Изменить адрес отправки</string>

    <string name="authentication_registration_confirm_code_send_again">Отправить повторно активационный код</string>

    <string name="authentication_registration_confirm_code_sent">Активационный код отправлен</string>
    <string name="authentication_reset_code_code_sent">Код для сброса пароля отправлен</string>

    <string name="authentication_reset_code_code_incorrect">Код имеет неверный формат</string>
    <string name="authentication_reset_code_create_new_password">Создайте новый пароль для аккаунта</string>
    <string name="authentication_reset_code_enter_new_password">Введите новый пароль</string>
    <string name="autentication_change_password_success">Пароль был успешно изменен</string>
    <string name="menu_authentication">Аутентификация</string>
    <string name="menu_authorization">Войти</string>
    <string name="menu_register">Зарегистрироваться</string>
    <string name="menu_exit">Выйти</string>
    <string name="menu_books">Книги</string>
    <string name="menu_find_book">Найти книгу</string>
    <string name="menu_recommendations">Рекомендации</string>
    <string name="empty_book_list">Книг нет</string>
    <string name="menu_authors">Авторы</string>
    <string name="menu_find_author">Найти автора</string>
    <string name="edit_review">Изменить</string>
    <string name="add_review">Оставить отзыв</string>
    <string name="go_to_books">Go to books</string>
    <string name="menu_book_lists">Списки книг</string>
    <string name="inscription_list_name">Название списка</string>
    <string name="autofill_list_name">list_name</string>
    <string name="inscription_dialog_add_list_title">Укажите имя списка:</string>
    <string name="text_create">Создать</string>
    <string name="text_delete">Удалить</string>
    <string name="dialog_warn_deleting_title">Вы действительно хотите удалить список?</string>
    <string name="label_your_rating">Ваша оценка:</string>
    <string name="text_add_to_read">Добавить в прочитанное</string>
    <string name="text_add">Добавить</string>
    <string name="inscription_dialog_set_list">Укажите список:</string>
    <string name="text_rating">Рейтинг</string>
    <string name="text_grade">Оценка:</string>
    <string name="text_update">Обновить</string>
    <string name="text_share">Выполнить рассылку</string>
    <string name="select_books">Выбрать книги</string>
    <string name="create_promotion">Создать акцию</string>


    <string name="date_end_early_start_error">Дата завершения акции должна быть после даты начала</string>
    <string name="task_date_end_error_today">Дата завершения акции не должна быть в прошлом</string>
    <string name="text_not_found">Результаты не найдены</string>
    <string name="strike_string"><strike>%1$s</strike></string>
    <string name="strike_string_2"><strike>Зачеркнуто!</strike></string>
</resources>
