<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/registration_login_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"

            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="100dp"
                android:text="@string/authentication_registration_enter_password"
                android:textSize="18sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:theme="@style/ThemeWithBlackAccent">

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/authentication_authorization_password"
                    android:inputType="textPassword"
                    android:backgroundTint="@android:color/black"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirm_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:theme="@style/ThemeWithBlackAccent">

                <EditText
                    android:id="@+id/editConfirm"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/authentication_registration_confirm_password"
                    android:inputType="textPassword"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/loginButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="50dp"
                android:background="@android:color/transparent"
                android:src="@mipmap/authorization_button_background_unenable" />

        </LinearLayout>

        <android.support.v4.widget.ContentLoadingProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65999997" />

    </android.support.constraint.ConstraintLayout>
</layout>